# GMA

./: .dockerignore  .gitignore  GMA.xlsx  README.md  pyproject.toml
configs/: default.toml
docker/: Dockerfile  adb_relay.py  entrypoint.sh  start_novnc.sh
scripts/: build_ready_image.sh  seed_asset_smoke.py  seed_elementx_smoke.py  seed_elementx_tempus_smoke.py
src/gma/: __init__.py
src/gma/agents/: __init__.py  base.py  e2e_agent.py  mai_ui_agent.py  registry.py  user_simulator.py
src/gma/annotator/: __init__.py  server.py
src/gma/apps/: __init__.py  _shell.py  backend_baseline.py  elementx.py  hmdp.py  mall.py  mattermost.py  meituan.py  offline_webapps.py  tempus.py  travel.py  xiaoshiliu.py
src/gma/apps/seed_data/mall_meituan/: mall_seed.sql  meituan_categories.json  meituan_foods.json  meituan_restaurants.json
src/gma/apps/seed_data/xiaoshiliu/: xiaoshiliu_seed.sql
src/gma/assets/: __init__.py  apply.py  models.py
src/gma/assets/seed_data/mastodon/system/: .init_done
src/gma/core/: cli.py  config.py  runner.py  server.py  task_runtime.py
src/gma/evaluation/: __init__.py  criteria.py  result.py
src/gma/evaluation/checks/: __init__.py  answer.py  assets.py  mall.py
src/gma/logging/: __init__.py  trajectory.py
src/gma/runtime/: __init__.py  client.py  controller.py  docker.py  models.py
src/gma/tasks/: __init__.py  base.py  registry.py
src/gma/tasks/definitions/GMA/calendar_create_concert_birdsnest/: calendar_create_concert_birdsnest.py  metadata.json
src/gma/tasks/definitions/GMA/calendar_delete_birthday_dinner/: metadata.json  (+1 more)
(+567 files in other folders)
